--- a/.env
+++ b/.env
@@ -9,6 +9,10 @@ DB_PORT=5432
 DB_NAME=maxitsa_db
 DB_USER=postgres
 DB_PASSWORD=passer123
+DSN = pgsql:host=localhost;port=5432;dbname=maxitsa_db
+# DSN = mysql:host=localhost;port=3306;dbname=maxitsa_db
+
+
 
 # Pour SQLite (si besoin plus tard)
 # DB_PATH=/chemin/vers/ta_base.sqlite
