gestion des migrations

--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "twilio/sdk": "^8.6"
     },
     "scripts": {
-    "database:migrate": "php migrations/migration.php",
-    "seeder:migrate":"php seeders/seeder.php",
+    "database:migrate": "php migrations/migration.php --reset",
+    "seeder:migrate":"php seeders/seeder.php --reset",
     "start": "php -S localhost:8000 -t public"
 }
 }
